# Electrical_Codes_Vyadh

./: DataRateReceiver.ino  HC12_transmitter_code.ino  README.md  sendReceive.ino  transciever_copy_20240910225434.ino
controller code/current versions/LoRa versions/controller_duplex_v4/: controller_duplex_v4.ino
controller code/current versions/LoRa versions/controller_v2/: controller_v2.ino
controller code/current versions/LoRa versions/robotic_arm_v3_uart_v3/: robotic_arm_v3_uart_v3.ino
src/Delete Later/: BYLAWS_2024(EDITED).docx
src/HC12/: DataRateTransmitter.ino  codeeeeeeee_1out.ino  codeeeeeeee_Allout.ino  codeeeeeeee_receive.ino
src/NRF/: Joystick_Transmitter.ino  Joystick_reciever.ino  Triangle_signal_tester_reciever.ino  Triangle_signal_tester_transmitter.ino
src/Robotic_Arm/: Joint_Control.ino  Wrist_Control.ino  test_code_ver2_esp.ino
src/Robotic_Arm/Ros2_wss/install/: local_setup.sh  setup.bash  setup.ps1  (+2 more)
src/Robotic_Arm/Ros2_wss/install/trial_links/share/trial_links/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/Robotic_Arm/Ros2_wss/install/trial_links/share/trial_links/launch/: display.launch.py
src/Robotic_Arm/Ros2_wss/install/trial_links/share/trial_links/meshes/: Wrist_Assembly_v1_1.stl  base_link.stl  base_plate_1.stl  coupling_v1_1.stl  key_for_coupling_v1_1.stl  link1_1.stl  link2_1.stl  link3_1.stl  turn_table_v1_1.stl
src/Robotic_Arm/Ros2_wss/install/trial_links/share/trial_links/rviz/: display_config.rviz
src/Robotic_Arm/Ros2_wss/install/trial_links/share/trial_links/urdf/: Untitled_v2.urdf
(+16 files in other folders)
